--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "randomstring": "^1.3.1"
   }
 }
